# SmartScopeAutomatedDome

./: README.md
3mf/: 01_base_ring.3mf  02_dome_lower.3mf  02b_eq_extension.3mf  03_dome_lower.3mf  03_dome_upper.3mf  04_dome_upper.3mf  04_hardware_parts.3mf
firmware/dome_controller/: dome_controller.ino
openscad/: 03_dome_lower.scad  05_hardware_parts.scad
v2/: README.md
v2/3mf/: 01_base_ring.3mf  02a_adapter_altaz.3mf  02b_eq_extension.3mf  03_dome_lower.3mf  04_dome_upper.3mf  05_hardware_parts.3mf
v2/indi/: CMakeLists.txt  indi_seestar_nano_dome.xml  seestar_nano_dome.cpp
v2/openscad/: 01_base_ring.scad  02a_adapter_altaz.scad  02b_eq_extension.scad  03_dome_lower.scad  04_dome_upper.scad  05_hardware_parts.scad  params.scad
v3/: README_V3_ADDENDUM.md
v3/3mf/: 01_base_ring.3mf  02_dome_lower.3mf  03_crown_panels.3mf  04_drive_hardware.3mf
v3/firmware/dome_controller_v3/: dome_controller_v3.ino
v3/indi/: CMakeLists.txt  indi_seestar_slewing_dome.xml  seestar_slewing_dome.cpp
v3/openscad/: 01_base_ring.scad  02_dome_lower.scad  03_crown_panels.scad  04_drive_hardware.scad  params.scad
