cmake_minimum_required(VERSION 3.5)
project(seestar-slewing-dome CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(INDI REQUIRED)
find_package(Nova REQUIRED)
include_directories(${INDI_INCLUDE_DIR} ${NOVA_INCLUDE_DIR})
add_executable(indi_seestar_slewing_dome seestar_slewing_dome.cpp)
target_link_libraries(indi_seestar_slewing_dome ${INDI_LIBRARIES} ${NOVA_LIBRARIES} pthread)
install(TARGETS indi_seestar_slewing_dome RUNTIME DESTINATION bin)
install(FILES indi_seestar_slewing_dome.xml DESTINATION ${INDI_DATA_DIR})
